Changelog
=========

Version: 3.5
Date   : 18/04/2008
Author : Ian Ventura-Whiting (Fizz)
Changes: The following are a list of changes
         since the previous version:
            > Added FW1 Client Authentication trigger

Version: 3.4
Date   : 31/03/2008
Author : Ian Ventura-Whiting (Fizz)
Changes: The following are a list of changes
         since the previous version:
            > Added Telnet trigger

Version: 3.3
Date   : 01/01/2008
Author : Ian Ventura-Whiting (Fizz)
Changes: The following are a list of changes
         since the previous version:
            > Revised the license to make a
              binary compatability exception with
              OpenSSL.
            > Added a Makefile
            > Added a manual page

Version: 3.2
Date   : 29/10/2007
Author : Ian Ventura-Whiting (Fizz)
Changes: The following are a list of changes
         since the previous version:
            > Added a further SSL read timeout
              for SSL services that do not want
              to play fair.

Version: 3.1
Date   : 25/09/2007
Author : Ian Ventura-Whiting (Fizz)
Changes: The following are a list of changes
         since the previous version:
            > An exception added to the license
              to make it BINARY compatible with
              OpenSSL. Makes it easier for
              packagers.

Version: 3.0
Date   : 20/09/2007
Author : Ian Ventura-Whiting (Fizz)
Notes  : This version adds support for UDP
         services
Changes: The following are a list of changes
         since the previous version:
            > Added UDP support.
            > Added NTP trigger.
            > Added SNMP trigger.
            > Added NetBIOS-NS trigger.
            > Removed new line at program end.
            > General tidyup.

Version: 2.0
Date   : 03/09/2007
Author : Ian Ventura-Whiting (Fizz)
Notes  : This version identifies SSL services and
         provides SSL service information. Use an
         SSLScanner to determine the supported